--- a/index.html
+++ b/index.html
@@ -25,23 +25,16 @@
 			<div id="text">
 				<div id="code">
 					<font color="#FF0000">
-<!--						<span class="say">MyLady，我喜欢你，虽然虽然代码是抄的</span><br>-->
-<!--						<span class="say"> </span><br>-->
-<!--						<span class="say"> 但是喜欢你是真的</span><br>-->
-<!--						<span class="say"> </span><br>-->
-<!--						<span class="say">我知道我不会甜言蜜语，但是我。。。。。。</span><br>-->
-<!--						<span class="say"> </span><br>-->
-<!--						<span class="say">2019.10.02第一次约会</span><br>-->
-<!--						<span class="say"> </span><br>-->
-<!--						<span class="say">然后我们在一起了</span><br>-->
-<!--						<span class="say"> </span><br>-->
-<!--						<span class="say">这个假期太漫长，我好想你</span><br>-->
+						<span class="say">你是个憨憨</span><br>
+						<span class="say"> </span><br>		
+						<span class="say">你还是个憨憨</span><br>
+						<span class="say"> </span><br>	
 					</font>
 				</div>
 			</div>
 			<div id="clock-box">
-<!--				<span><font color="#666666">亲爱的，我们相识已经是</font></span>-->
-<!--				<div id="clock"></div>-->
+				<span><font color="#666666">亲爱的，我们相识已经是</font></span>
+				<div id="clock"></div>
 			</div>
 			<canvas id="canvas" width="1100" height="680"></canvas>
 		</div>
